--- a/app/src/main/res/layout/info.xml
+++ b/app/src/main/res/layout/info.xml
@@ -20,7 +20,7 @@
             android:layout_gravity="center_horizontal"
             android:text="a" />
 
-		<ds.photosight.view.widget.Histogram
+		<ds.photosight.ui.widget.Histogram
 			android:id="@+id/histogram"
             android:layout_marginTop="10dp"
 			android:layout_width="match_parent"
