--- a/app/src/main/res/layout/votes.xml
+++ b/app/src/main/res/layout/votes.xml
@@ -1,23 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:animateLayoutChanges="true"
     android:background="#2888"
-    android:paddingTop="40dp"
+    android:paddingTop="32dp"
     android:paddingRight="10dp"
-    android:paddingBottom="30dp"
+    android:paddingBottom="32dp"
     tools:ignore="RtlSymmetry"
-    tools:parentTag="LinearLayout"
     >
 
     <LinearLayout
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         >
 
         <LinearLayout
@@ -26,6 +24,7 @@
             android:layout_height="wrap_content"
             android:layoutAnimation="@anim/cascade"
             android:orientation="vertical"
+            android:paddingLeft="30dp"
             >
 
             <TextView
@@ -68,11 +67,6 @@
             android:layout_marginRight="10dp"
             android:background="@color/red"
             >
-
-            <!--<View
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                />-->
 
             <View
                 android:id="@+id/greenBar"
@@ -135,8 +129,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:layout_gravity="right"
         >
 
     </LinearLayout>
 
-</LinearLayout>
+</FrameLayout>
