api refactoring ui refactoring

--- a/app/src/main/res/layout/votes.xml
+++ b/app/src/main/res/layout/votes.xml
@@ -25,6 +25,7 @@
             android:layoutAnimation="@anim/cascade"
             android:orientation="vertical"
             android:paddingLeft="30dp"
+            android:clipToPadding="false"
             >
 
             <TextView
