--- a/app/src/main/res/menu/menu_viewer.xml
+++ b/app/src/main/res/menu/menu_viewer.xml
@@ -5,7 +5,7 @@
         android:id="@+id/im_share"
         android:icon="@drawable/ic_action_share"
         android:title="@string/share"
-        app:showAsAction="ifRoom">
+        app:showAsAction="always">
         <menu>
             <item
                 android:id="@+id/im_share_link"
@@ -21,18 +21,18 @@
         android:id="@+id/im_save_sdcard"
         android:icon="@drawable/ic_action_save"
         android:title="@string/save_to_sd"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always" />
 
     <item
         android:id="@+id/im_info"
         android:icon="@drawable/ic_action_histogram"
         android:title="@string/histogram"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always" />
 
     <item
         android:id="@+id/im_open_in_browser"
         android:icon="@drawable/ic_action_web"
         android:title="@string/open_in_web_browser"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always" />
 
 </menu>
