--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,8 +26,8 @@
 
     <style name="AppTheme.Black" parent="AppTheme">
         <item name="android:windowBackground">@color/black</item>
-        <item name="colorSurface">@color/translucent</item>
-
+        <item name="colorSurface">@color/drawer_background</item>
+        <item name="colorControlNormal">@color/white</item>
     </style>
 
     <style name="SplashTheme" parent="AppTheme">
