proper animations ui fixes

--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -72,6 +72,12 @@
             android:background="@null"
             android:indeterminate="true"
             />
+        <!--<com.google.android.material.progressindicator.ProgressIndicator
+            android:id="@+id/progress"
+            style="@style/Widget.MaterialComponents.ProgressIndicator.Linear.Indeterminate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />-->
 
         <View
             android:id="@+id/screenBottom"
