--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -48,6 +48,10 @@
         <item name="cornerSizeTopRight">16dp</item>
     </style>
 
+    <style name="MenuShape" parent="ShapeAppearance.MaterialComponents.Tooltip">
+        <item name="cornerSize">8dp</item>
+    </style>
+
     <style name="IndeterminateLinearProgressIndicatorStyle" parent="Widget.MaterialComponents.ProgressIndicator.Linear.Indeterminate">
         <item name="indicatorColor">?colorSecondary</item>
     </style>
