histogram photo details

--- a/app/src/main/res/layout/view_menu.xml
+++ b/app/src/main/res/layout/view_menu.xml
@@ -6,11 +6,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center_horizontal"
-    android:backgroundTint="@color/grey_light"
+    android:backgroundTint="?android:colorBackground"
     android:elevation="20dp"
     android:maxWidth="360dp"
     android:orientation="vertical"
-    android:theme="@style/AppTheme.Light"
+    android:theme="@style/AppTheme.BottomSheet"
     app:behavior_peekHeight="@dimen/peek_height"
     app:layout_behavior=".ui.widget.HideableBottomSheet"
     app:shapeAppearance="@style/BottomTabsShapeAppearance"
