--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,20 +13,26 @@
 
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <item name="android:textColorLink">?colorSecondary</item>
-        <!--        <item name="android:windowTranslucentStatus">true</item>
-                <item name="android:windowTranslucentNavigation">true</item>-->
+
     </style>
 
-    <style name="AppTheme.Light" parent="Theme.MaterialComponents.Light.NoActionBar">
+    <style name="AppTheme.BottomSheet" parent="Theme.MaterialComponents.Light.BottomSheetDialog">
+        <item name="android:colorBackground">@color/grey_light</item>
         <item name="colorPrimary">@color/primary</item>
-        <item name="colorSurface">@color/grey_light</item>
+        <item name="colorSurface">?android:colorBackground</item>
         <item name="colorSecondary">@color/accent</item>
-        <item name="android:windowBackground">@color/grey_light</item>
+        <item name="bottomSheetStyle">@style/BottomSheet</item>
+        <item name="android:windowIsFloating">false</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">?android:colorBackground</item>
+        <item name="android:windowLightNavigationBar">true</item>
+        <item name="shapeAppearanceLargeComponent">@style/BottomTabsShapeAppearance</item>
+        <!--<item name="android:navigationBarDividerColor">?android:colorBackground</item>-->
     </style>
 
     <style name="AppTheme.Black" parent="AppTheme">
         <item name="android:windowBackground">@color/black</item>
-        <item name="colorSurface">@color/drawer_background</item>
+        <item name="colorSurface">@color/translucent</item>
         <item name="colorControlNormal">@color/white</item>
     </style>
 
@@ -42,10 +48,19 @@
         <item name="android:textColorLink">@color/accent</item>
     </style>
 
+    <style name="Theme.NoWiredStrapInNavigationBar" parent="@style/Theme.Design.BottomSheetDialog">
+        <item name="android:windowIsFloating">false</item>
+        <item name="android:navigationBarColor">@color/grey_light</item>
+    </style>
+
+    <style name="BottomSheet" parent="Widget.MaterialComponents.BottomSheet">
+        <item name="shapeAppearanceOverlay">@style/BottomTabsShapeAppearance</item>
+    </style>
+
     <style name="BottomTabsShapeAppearance" parent="ShapeAppearance.MaterialComponents">
         <item name="cornerFamily">rounded</item>
-        <item name="cornerSizeTopLeft">16dp</item>
-        <item name="cornerSizeTopRight">16dp</item>
+        <item name="cornerSizeTopLeft">8dp</item>
+        <item name="cornerSizeTopRight">8dp</item>
     </style>
 
     <style name="MenuShape" parent="ShapeAppearance.MaterialComponents.Tooltip">
@@ -71,6 +86,10 @@
         <item name="android:fontFamily">@string/light_font</item>
         <item name="android:textSize">22sp</item>
         <item name="android:textColor">@color/primary_text</item>
+    </style>
+
+    <style name="PhotoInfoText">
+        <item name="android:textColor">@color/primary</item>
     </style>
 
 
