save photo codebase cleanup

--- a/app/src/main/res/layout/item_menu.xml
+++ b/app/src/main/res/layout/item_menu.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:ellipsize="marquee"
-    android:gravity="center_vertical"
+    android:gravity="center"
     android:marqueeRepeatLimit="marquee_forever"
     android:minHeight="54dp"
     android:paddingStart="16dip"
