--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -32,7 +32,7 @@
         android:layout_toRightOf="@+id/avatar"
         android:fontFamily="sans-serif-condensed"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="@color/primary_text"
+        android:textColor="@color/aot_value"
         app:layout_constraintStart_toEndOf="@+id/avatar"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="John Smith"
@@ -45,7 +45,7 @@
         android:layout_below="@+id/avatar"
         android:layout_alignParentLeft="true"
         android:layout_marginTop="8dp"
-        android:textColor="@color/primary_text"
+        android:textColor="@color/aot_value"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/avatar"
         tools:text="Great photo!"
@@ -59,7 +59,7 @@
         android:layout_marginStart="16dp"
         android:layout_toRightOf="@+id/avatar"
         android:fontFamily="sans-serif-light"
-        android:textColor="@color/text_secondary"
+        android:textColor="@color/comment_text_secondary"
         android:textSize="12sp"
         app:layout_constraintStart_toEndOf="@+id/avatar"
         app:layout_constraintTop_toBottomOf="@+id/name"
@@ -71,7 +71,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:textColor="@color/text_secondary"
+        android:textColor="@color/comment_text_secondary"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
