--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,13 +9,13 @@
     <color name="black">#000</color>
     <color name="grey_dark">#333</color>
     <color name="grey">#666</color>
+    <color name="comment_text_secondary">#888</color>
     <color name="grey_light">#ccc</color>
+    <color name="aot_label">@color/grey_light</color>
+    <color name="aot_value">#ddd</color>
 
     <color name="red">#ffdd3e35</color>
     <color name="blue">#ff15a9dc</color>
-    <!--legacy-->
-    <color name="text_secondary">#888</color>
-    <color name="primary_text">#ddd</color>
-    <color name="ab_text">#ccc</color>
     <color name="white">#fff</color>
+    <!--legacy-->
 </resources>
