--- a/app/src/main/res/drawable/menu_selector.xml
+++ b/app/src/main/res/drawable/menu_selector.xml
@@ -17,7 +17,7 @@
             </item>
 
             <item android:state_activated="true">
-                <color android:color="@color/background" />
+                <color android:color="@color/grey_dark" />
             </item>
 
         </selector>
