--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -37,6 +37,8 @@
         app:spanCount="2"
         tools:itemCount="100"
         tools:listitem="@layout/item_gallery_photo"
+        android:clipToPadding="false"
+        android:clipChildren="false"
         />
 
 
