--- a/app/src/main/res/layout/item_viewer_photo.xml
+++ b/app/src/main/res/layout/item_viewer_photo.xml
@@ -17,12 +17,12 @@
         tools:src="@mipmap/ic_launcher"
         />
 
-    <com.google.android.material.progressindicator.ProgressIndicator
+    <com.google.android.material.progressindicator.CircularProgressIndicator
         android:id="@+id/photoProgress"
-        style="@style/Widget.MaterialComponents.ProgressIndicator.Circular.Indeterminate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:indeterminate="true"
         />
 </FrameLayout>
 
