--- a/app/src/main/res/layout/fragment_viewer.xml
+++ b/app/src/main/res/layout/fragment_viewer.xml
@@ -25,6 +25,7 @@
             />
 
         <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/appBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:animateLayoutChanges="true"
