--- a/compose/src/main/res/values/themes.xml
+++ b/compose/src/main/res/values/themes.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-    <style name="Theme.Photosight2" parent="android:Theme.Material.NoActionBar" />
-
-    <style name="SplashTheme" parent="Theme.Photosight2">
-        <item name="android:windowBackground">@drawable/splash</item>
+    <style name="Theme.Photosight" parent="android:Theme.Material.NoActionBar" >
         <item name="android:windowTranslucentStatus">true</item>
         <item name="android:windowTranslucentNavigation">true</item>
         <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
+    </style>
+
+    <style name="Theme.Splash" parent="Theme.Photosight">
+        <item name="android:windowBackground">@drawable/splash</item>
     </style>
 
 </resources>
