--- a/compose/src/main/res/xml/filepaths.xml
+++ b/compose/src/main/res/xml/filepaths.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <paths>
     <cache-path
-        name="coil_images"
-        path="image_manager_disk_cache"
+        name="coil"
+        path="image_cache"
         />
 </paths>
